got guessed letters to show up

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
     <br>
 
 
-    <h3>Wins:</h3>
+    <h3>Wins:</h3><h3 id="ganar"></h3>
 
     <br>
 
-    <h3>Losses:</h3>
+    <h3>Losses:</h3><h3 id="perder"></h3>
 
     <br>
 
-    <h3>Guesses Left:</h3>
+    <h3>Guesses Left:</h3><h3 id="gleft"></h3>
 
     <br>
 
-    <h3>Guessed Letters:</h3>
+    <h3>Guessed Letters:</h3><h3 id="gletters"></h3>
 
     <br>
    
-    <input id="form"> </input>
-    <button id="submit">OK</button>
+    <input id="form" type="text" placeholder="Your guess..."> </input>
+    <button onclick="myFunction()">OK</button>
     
 </body>
 
