turning in psychic game, wins will not work

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <br>
 
-    <h3>Guesses Left:</h3><h3 id="gleft"></h3>
+    <h3>Guesses So Far:</h3><h3 id="gleft"></h3>
 
     <br>
 
@@ -30,7 +30,7 @@
     <br>
    
     <input id="form" type="text" placeholder="Your guess..."> </input>
-    <button onclick="myFunction()">OK</button>
+    
     
 </body>
 
